@@ -6,9 +6,7 @@
 
 language: c
 
-env:
-  global:
-    - _R_CHECK_FORCE_SUGGESTS_=FALSE
+sudo: required
 
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
@@ -16,8 +14,7 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget libboost-program-options-dev
-  - ./travis-tool.sh install_r Rcpp
+  - ./travis-tool.sh install_aptget libboost-program-options-dev r-cran-rcpp
 
 script: 
   - ./travis-tool.sh run_tests
