@@ -1,3 +1,7 @@
+2015-10-11  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Updated to use sudo, and install Rcpp via apt
+
 2015-10-10  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/lda_core.cc: Do not use #warning as it is gcc specific
